force-app/main/default/objects/Courier_Application__c/Courier_Application__c.object-meta.xml
<CustomObject>
    <label>Courier Application</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Courier Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courier Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>