force-app/main/default/objects/Courier_Application__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Courier Applications</relationshipLabel>
    <relationshipName>Courier_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>