force-app/main/default/objects/Courier_Application__c/fields/Courier_Control__c.field-meta.xml
<CustomField>
    <fullName>Courier_Control__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Courier Control</label>
    <referenceTo>Courier_Control__c</referenceTo>
    <relationshipLabel>Courier Applications</relationshipLabel>
    <relationshipName>Courier_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>