force-app/main/default/objects/Courier_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>File In Transit</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
            <value>
                <fullName>Re-Dispatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>