force-app/main/default/objects/Courier_Application__c/listViews/Todays_Record.listView-meta.xml
<ListView>
    <fullName>Todays_Record</fullName>
    <columns>NAME</columns>
    <columns>Application__c</columns>
    <columns>Courier_Control__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays Record</label>
</ListView>